pre-audit merge
